<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="wrap_content"
xmlns:app="http://schemas.android.com/apk/res-auto"
app:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="411dp"
        android:layout_height="53dp"
        android:layout_margin="4dp">

        <TextView
            android:id="@+id/usernameView"
            android:layout_width="248dp"
            android:layout_height="41dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="12dp"
            android:layout_marginTop="9dp"
            android:layout_marginBottom="3dp"
            android:text="username"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_send_coin_to_user"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="48dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="27dp"
            android:layout_marginBottom="6dp"
            android:layout_toEndOf="@+id/textView"
            android:text="SEND"
            android:textSize="18sp" />
    </RelativeLayout>
</android.support.v7.widget.CardView>