...
    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/maps_icon"
        android:title="Map"/>

    <item
        android:id="@+id/navigation_bank"
        android:icon="@drawable/bank_icon"
        android:title="Bank"/>

    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/shop_icon"
...
