...
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="69dp"
            android:layout_marginBottom="11dp"
            android:layout_toStartOf="@+id/button_view_coin"
            android:layout_toEndOf="@+id/imageView2"
            android:text="Mystery Coin"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="18sp" />


...
